--- a/package.json
+++ b/package.json
@@ -6,9 +6,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "antd": "^5.2.2",
     "next": "latest",
+    "postcss-cli": "^10.1.0",
     "react": "18.2.0",
+    "react-calendly": "^4.1.1",
     "react-dom": "18.2.0",
-    "sharp": "^0.31.3"
+    "react-icons": "^4.7.1",
+    "sharp": "^0.31.3",
+    "styled-components": "^5.3.6"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "tailwindcss": "^3.2.7"
   }
 }
