--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
-    "antd": "^5.2.2",
     "next": "latest",
     "postcss-cli": "^10.1.0",
     "react": "18.2.0",
