--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
     "dev": "next dev",
     "build": "next build && next export",
     "start": "next start",
-    "postbuild":"next-sitemap --config next-sitemap.config.js"
+    "postbuild": "next-sitemap --config next-sitemap.config.js"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
+    "fs-extra": "^11.1.1",
     "next": "latest",
     "postcss-cli": "^10.1.0",
     "react": "18.2.0",
