--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-calendly": "^4.1.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-youtube": "^10.1.0",
     "sharp": "^0.31.3",
     "styled-components": "^5.3.6"
   },
