--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
+    "@headlessui/react": "^1.7.18",
     "fs-extra": "^11.1.1",
     "next": "latest",
     "postcss-cli": "^10.1.0",
