--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@headlessui/react": "^1.7.18",
+    "flickity": "^2.3.0",
     "fs-extra": "^11.1.1",
     "next": "latest",
     "postcss-cli": "^10.1.0",
@@ -18,7 +19,8 @@
     "react-icons": "^4.7.1",
     "react-youtube": "^10.1.0",
     "sharp": "^0.31.3",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "swiper": "^11.0.6"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
