--- a/package.json
+++ b/package.json
@@ -31,5 +31,15 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "tailwindcss": "^3.2.7"
-  }
+  },
+  "name": "lloronanext180223",
+  "description": "This is a starter template for [Learn Next.js](https://nextjs.org/learn).# lloronaNext180223",
+  "version": "1.0.0",
+  "main": "next-sitemap.config.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
