sistema de premios encuesta v1

--- a/package.json
+++ b/package.json
@@ -7,17 +7,24 @@
     "postbuild": "next-sitemap --config next-sitemap.config.js"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.18",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
+    "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
     "flickity": "^2.3.0",
     "fs-extra": "^11.1.1",
+    "mui-datatables": "^4.3.0",
     "next": "latest",
     "postcss-cli": "^10.1.0",
     "react": "18.2.0",
     "react-calendly": "^4.1.1",
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.12.0",
+    "react-toastify": "^10.0.5",
     "react-youtube": "^10.1.0",
     "sharp": "^0.31.3",
     "styled-components": "^5.3.6",
