--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "flickity": "^2.3.0",
     "fs-extra": "^11.1.1",
     "next": "latest",
+    "owl.carousel": "^2.3.4",
     "postcss-cli": "^10.1.0",
     "react": "18.2.0",
     "react-calendly": "^4.1.1",
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-icons": "^4.7.1",
+    "react-owl-carousel": "^2.3.3",
     "react-youtube": "^10.1.0",
     "sharp": "^0.31.3",
     "styled-components": "^5.3.6",
