--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/react": "^11.10.6",
     "@headlessui/react": "^1.7.18",
     "flickity": "^2.3.0",
+    "framer-motion": "^11.13.1",
     "fs-extra": "^11.1.1",
     "mysql2": "^3.11.0",
     "next": "latest",
