--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "private": true,
+  "name": "llorona-next",
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -7,12 +8,14 @@
     "postbuild": "next-sitemap --config next-sitemap.config.js"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.7.1",
     "@emotion/react": "^11.10.6",
     "@headlessui/react": "^1.7.18",
+    "aws-amplify": "^6.10.2",
     "flickity": "^2.3.0",
     "framer-motion": "^11.13.1",
     "fs-extra": "^11.1.1",
-    "mysql2": "^3.11.0",
+    "mysql2": "^3.11.5",
     "next": "latest",
     "owl.carousel": "^2.3.4",
     "postcss-cli": "^10.1.0",
@@ -23,18 +26,27 @@
     "react-icons": "^4.12.0",
     "react-owl-carousel": "^2.3.3",
     "react-youtube": "^10.1.0",
+    "sequelize": "^6.37.5",
     "sharp": "^0.31.3",
     "styled-components": "^5.3.6",
     "swiper": "^11.0.6",
     "tiktok-pixel": "^2.0.3"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.8.0",
+    "@aws-amplify/backend-cli": "^1.4.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "autoprefixer": "^10.4.13",
+    "aws-cdk": "^2.172.0",
+    "aws-cdk-lib": "^2.172.0",
+    "constructs": "^10.4.2",
+    "esbuild": "^0.24.0",
     "eslint-config-prettier": "^9.1.0",
     "next-sitemap": "^4.0.6",
     "postcss": "^8.4.21",
     "prettier": "^2.8.8",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2"
   }
 }
