--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "postbuild": "next-sitemap --config next-sitemap.config.js"
   },
   "dependencies": {
-    "@aws-amplify/ui-react": "^6.7.1",
+    "@aws-amplify/adapter-nextjs": "^1.2.32",
     "@emotion/react": "^11.10.6",
     "@headlessui/react": "^1.7.18",
-    "aws-amplify": "^6.10.2",
     "flickity": "^2.3.0",
     "framer-motion": "^11.13.1",
     "fs-extra": "^11.1.1",
@@ -36,6 +35,7 @@
     "@aws-amplify/backend": "^1.8.0",
     "@aws-amplify/backend-cli": "^1.4.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@types/react": "18.3.14",
     "autoprefixer": "^10.4.13",
     "aws-cdk": "^2.172.0",
     "aws-cdk-lib": "^2.172.0",
