--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@emotion/react": "^11.10.6",
     "@headlessui/react": "^1.7.18",
     "flickity": "^2.3.0",
+    "formidable": "^3.5.2",
     "framer-motion": "^11.13.1",
     "fs-extra": "^11.1.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.5",
     "next": "latest",
+    "next-connect": "^0.12.2",
     "owl.carousel": "^2.3.4",
     "postcss-cli": "^10.1.0",
     "react": "18.2.0",
