recursos humanos hoy

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@aws-amplify/adapter-nextjs": "^1.2.32",
     "@emotion/react": "^11.10.6",
     "@headlessui/react": "^1.7.18",
+    "chart.js": "^4.4.7",
     "flickity": "^2.3.0",
     "formidable": "^3.5.2",
     "framer-motion": "^11.13.1",
@@ -19,10 +20,12 @@
     "mysql2": "^3.11.5",
     "next": "latest",
     "next-connect": "^0.12.2",
+    "openai": "^4.77.3",
     "owl.carousel": "^2.3.4",
     "postcss-cli": "^10.1.0",
     "react": "18.2.0",
     "react-calendly": "^4.1.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-icons": "^4.12.0",
